feat: Add employee middleware, add order details endpoint, add validation in order creation
